--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,3 +5,18 @@
   justify-content: center;
   text-align: center;
 }
+
+.image {
+  width: 370px;
+  margin-top: 50px;
+}
+
+@media (max-width: 770px) {
+  .container {
+    margin: 0 10%;
+  }
+
+  .image {
+    width: 100%;
+  }
+}
