--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -6,7 +6,7 @@
   margin: 0 2% !important;
 }
 
-.infected {
+.confirmed {
   border-bottom: 10px solid lightblue;
 }
 
@@ -16,4 +16,10 @@
 
 .deaths {
   border-bottom: 10px solid rgb(255, 0, 0, 0.7);
+}
+
+@media (max-width: 770px) {
+  .card {
+    margin: 2% !important;
+  }
 }
